<resources>
    <string name="app_name">e购商城</string>
    <string name="string_logo">图标</string>
    <string name="edit_phone">请输入你的手机号</string>
    <string name="edit_pwd">请输入你的密码</string>
    <string name="clear">清除</string>
    <string name="pwd_show">密码显示</string>
    <string name="login">登录</string>
    <string name="regist_phone">注册账号</string>
    <string name="pwd_find">找回密码</string>
    <string name="text_account">账    号</string>
    <string name="text_code">验证码</string>
    <string name="edit_code">请输入短信验证码</string>
    <string name="text_code_show">获取验证码</string>
    <string name="edit_people">请输入推荐人手机号</string>
    <string name="regist">注册</string>
    <string name="sure">确认</string>
    <string name="edit_pwd_sure">请再次输入密码</string>
    <string name="tab_home">首页</string>
    <string name="tab_act">赚客</string>
    <string name="tab_person">我的</string>
    <string name="net_error">网络异常，请重试</string>
    <string name="data_error">数据异常，请重试</string>
    <string name="exit">再按一次退出</string>
    <string name="pwd_sure">请输入确认密码</string>
    <string name="pwd_two_err">2次输入的密码不一致</string>
    <string name="gift_new">商品分类</string>
    <string name="goods_shop">商家联盟</string>
    <string name="movie">视频集锦</string>
    <string name="product">产品介绍</string>
    <string name="agent">我是代理</string>
    <string name="tuig">推广</string>
    <string name="join">商家合作</string>
    <string name="caogen">商家专享</string>
    <string name="permission_refuse">权限被拒，影响该功能正常使用</string>
    <string name="remind">提示</string>
    <string name="ok">确认</string>
    <string name="cancle">取消</string>
    <string name="phone">是否要拨打该电话：</string>
    <string name="person_fx">分销中心</string>
    <string name="person_dl">我是代理</string>
    <string name="person_zc">我的资产</string>
    <string name="order_me">我的订单</string>
    <string name="order_all">全部</string>
    <string name="person_pay_dai">待付款</string>
    <string name="person_goods_dai">待发货</string>
    <string name="person_goods_shou">待收货</string>
    <string name="person_goods_yz">待验证</string>
    <string name="tksh">退款售后</string>
    <string name="bank">银行卡</string>
    <string name="address">地址管理</string>
    <string name="jm">我要加盟</string>
    <string name="tg">我要推广</string>
    <string name="kf">专属客服</string>
    <string name="text_area_select">选择地区</string>
    <string name="net_use">您当前未处于wifi状态,是否继续观看该视频</string>
    <string name="location_err">定位失败,请重试</string>
    <string name="text_pay_moeny">实付金额：</string>
    <string name="pay_now">立即支付</string>
    <string name="person_add">＋ 选择收货人信息</string>
    <string name="pay_method">支付方式</string>
    <string name="wx_pay">微信支付</string>
    <string name="ali_pay">支付宝支付</string>
    <string name="gold_pay">余额支付</string>
    <string name="add_person_info">＋ 添加收货人信息</string>
    <string name="ask_free">免费咨询</string>
    <string name="tab_message">消息</string>
    <string name="tab_tpc">tpc专区</string>
    <string name="person_act">活动记录</string>
</resources>
