<?xml version="1.0" encoding="utf-8"?>
<com.zhy.android.percent.support.PercentLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_bg_color"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <ImageView
        android:layout_width="@dimen/dp_0"
        android:layout_height="@dimen/dp_0"
        android:layout_gravity="center_horizontal"
        android:background="@mipmap/bg_icon_rd"
        android:contentDescription="@string/string_logo"
        app:layout_heightPercent="26%w"
        app:layout_marginTopPercent="10%w"
        app:layout_widthPercent="26%w" />

    <com.zhy.android.percent.support.PercentLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_marginTopPercent="16%w">


        <com.zhy.android.percent.support.PercentRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingEnd="@dimen/dp_16"
            android:paddingStart="@dimen/dp_20"
            app:layout_heightPercent="12.8%w">


            <EditText
                android:singleLine="true"
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/transparent"
                android:drawablePadding="@dimen/dp_12"
                android:drawableStart="@mipmap/icon_shouji"
                android:hint="@string/edit_phone"
                android:inputType="phone"
                android:maxLength="11"
                android:textColorHint="@color/edit_phone_color"
                android:textColor="@color/text_black_3"
                app:layout_textSizePercent="4%w" />


            <ImageView
                android:id="@+id/iv_clear"
                android:layout_width="@dimen/dp_0"
                android:layout_height="@dimen/dp_0"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@mipmap/btn_cuohao"
                android:contentDescription="@string/clear"
                app:layout_heightPercent="5.6%w"
                app:layout_widthPercent="5.6%w" />


        </com.zhy.android.percent.support.PercentRelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0.5"
            android:layout_marginEnd="@dimen/dp_10"
            android:layout_marginStart="@dimen/dp_10"
            android:background="@color/theme_bg_color" />

        <com.zhy.android.percent.support.PercentRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingEnd="@dimen/dp_16"
            android:paddingStart="@dimen/dp_18"
            app:layout_heightPercent="12.8%w">


            <EditText
                android:id="@+id/et_pwd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/transparent"
                android:drawablePadding="@dimen/dp_10"
                android:drawableStart="@mipmap/icon_suo"
                android:hint="@string/edit_pwd"
                android:inputType="textPassword"
                android:maxLength="16"
                android:singleLine="true"
                android:textColorHint="@color/edit_phone_color"
                android:textColor="@color/text_black_3"
                app:layout_textSizePercent="4%w" />


            <ImageView
                android:id="@+id/iv_show"
                android:layout_width="@dimen/dp_0"
                android:layout_height="@dimen/dp_0"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@mipmap/btn_guanbi"
                android:contentDescription="@string/pwd_show"
                app:layout_heightPercent="3.6%w"
                app:layout_widthPercent="5.6%w" />


        </com.zhy.android.percent.support.PercentRelativeLayout>
    </com.zhy.android.percent.support.PercentLinearLayout>


    <TextView
        android:id="@+id/tv_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16"
        android:background="@drawable/shape_orange_bg"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/white"
        app:layout_heightPercent="10.8%w"
        app:layout_marginTopPercent="16%w"
        app:layout_textSizePercent="4.2%w" />

    <com.zhy.android.percent.support.PercentLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_regist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_6"
            android:text="@string/regist_phone"
            android:textColor="@color/orange"
            app:layout_textSizePercent="3.6%w" />

        <View
            android:layout_width="@dimen/dp_0.5"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/dp_4"
            android:layout_marginTop="@dimen/dp_4"
            android:background="@color/text_black_9" />

        <TextView
            android:id="@+id/tv_pwd_find"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/dp_6"
            android:text="@string/pwd_find"
            android:textColor="@color/orange"
            app:layout_textSizePercent="3.6%w" />
    </com.zhy.android.percent.support.PercentLinearLayout>

</com.zhy.android.percent.support.PercentLinearLayout>