<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/dp_10"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        android:text="@string/pay_method"
        android:textColor="@color/text_pay_black"
        android:textSize="@dimen/dp_14" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0.5"
        android:layout_marginEnd="@dimen/dp_10"
        android:layout_marginStart="@dimen/dp_10"
        android:background="@color/line_bg_e" />

    <LinearLayout
        android:id="@+id/ll_wx"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="@dimen/dp_10"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/dp_32"
            android:layout_height="@dimen/dp_32"
            android:layout_marginStart="@dimen/dp_16"
            android:background="@mipmap/img_icon_wechatpay" />

        <TextView
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_weight="1"
            android:text="@string/wx_pay"
            android:textColor="@color/text_pay_black"
            android:textSize="@dimen/dp_14" />


        <ImageView
            android:id="@+id/iv_wx_check"
            android:layout_width="@dimen/dp_18"
            android:layout_height="@dimen/dp_18"
            android:layout_marginEnd="@dimen/dp_16"
            android:layout_marginStart="@dimen/dp_16"
            android:background="@mipmap/btn_paystyle_selected" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_ali"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/dp_32"
            android:layout_height="@dimen/dp_32"
            android:layout_marginStart="@dimen/dp_16"
            android:background="@mipmap/img_icon_alipaypay" />

        <TextView
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_weight="1"
            android:text="@string/ali_pay"
            android:textColor="@color/text_pay_black"
            android:textSize="@dimen/dp_14" />


        <ImageView
            android:id="@+id/iv_ali_check"
            android:layout_width="@dimen/dp_18"
            android:layout_height="@dimen/dp_18"
            android:layout_marginEnd="@dimen/dp_16"
            android:layout_marginStart="@dimen/dp_16"
            android:background="@mipmap/btn_paystyle_default" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_gold"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="@dimen/dp_10"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/dp_32"
            android:layout_height="@dimen/dp_32"
            android:layout_marginStart="@dimen/dp_16"
            android:background="@mipmap/img_icon_yuepay" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:text="@string/gold_pay"
            android:textColor="@color/text_pay_black"
            android:textSize="@dimen/dp_14" />

        <TextView
            android:id="@+id/tv_gold_num"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#979CAD"
            android:textSize="@dimen/dp_14" />

        <ImageView
            android:id="@+id/iv_gold_check"
            android:layout_width="@dimen/dp_18"
            android:layout_height="@dimen/dp_18"
            android:layout_marginEnd="@dimen/dp_16"
            android:layout_marginStart="@dimen/dp_16"
            android:background="@mipmap/btn_paystyle_default" />
    </LinearLayout>
</LinearLayout>