<?xml version="1.0" encoding="utf-8"?>
<com.zhy.android.percent.support.PercentLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/theme_bg_color"
    android:fitsSystemWindows="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <include
        layout="@layout/common_title_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48" />

    <com.zhy.android.percent.support.PercentLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <com.zhy.android.percent.support.PercentRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingEnd="@dimen/dp_10"
            android:paddingStart="@dimen/dp_10"
            app:layout_heightPercent="12.8%w">

            <TextView
                android:id="@+id/tv_account"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="账        号"
                android:textColor="@color/text_black_6"
                app:layout_textSizePercent="4%w" />

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toRightOf="@id/tv_account"
                android:background="@color/transparent"
                android:hint="@string/edit_phone"
                android:inputType="phone"
                android:maxLength="11"
                android:paddingStart="@dimen/dp_10"
                android:singleLine="true"
                android:textColor="@color/text_black_3"
                android:textColorHint="@color/edit_phone_color"
                app:layout_textSizePercent="4%w" />


            <ImageView
                android:id="@+id/iv_clear"
                android:layout_width="@dimen/dp_0"
                android:layout_height="@dimen/dp_0"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@mipmap/btn_cuohao"
                android:contentDescription="@string/clear"
                app:layout_heightPercent="5.6%w"
                app:layout_widthPercent="5.6%w" />


        </com.zhy.android.percent.support.PercentRelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0.5"
            android:layout_marginEnd="@dimen/dp_10"
            android:layout_marginStart="@dimen/dp_10"
            android:background="@color/theme_bg_color" />

        <com.zhy.android.percent.support.PercentRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingEnd="@dimen/dp_10"
            android:paddingStart="@dimen/dp_10"
            app:layout_heightPercent="12.8%w">

            <TextView
                android:id="@+id/tv_code"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="验  证  码"
                android:textColor="@color/text_black_6"
                app:layout_textSizePercent="4%w" />

            <EditText
                android:id="@+id/et_code"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toRightOf="@id/tv_code"
                android:background="@color/transparent"
                android:hint="@string/edit_code"
                android:inputType="number"
                android:maxLength="6"
                android:paddingStart="@dimen/dp_10"
                android:singleLine="true"
                android:textColor="@color/text_black_3"
                android:textColorHint="@color/edit_phone_color"
                app:layout_textSizePercent="4%w" />

            <TextView
                android:id="@+id/tv_code_show"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:gravity="center"
                android:text="@string/text_code_show"
                android:textColor="@color/orange"
                app:layout_textSizePercent="3.6%w" />

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/dp_10"
                android:layout_marginEnd="@dimen/dp_6"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_toLeftOf="@id/tv_code_show"
                android:background="@color/orange" />

        </com.zhy.android.percent.support.PercentRelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0.5"
            android:layout_marginEnd="@dimen/dp_10"
            android:layout_marginStart="@dimen/dp_10"
            android:background="@color/theme_bg_color" />

        <com.zhy.android.percent.support.PercentRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingEnd="@dimen/dp_10"
            android:paddingStart="@dimen/dp_10"
            app:layout_heightPercent="12.8%w">

            <TextView
                android:id="@+id/tv_pwd"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="新  密  码"
                android:textColor="@color/text_black_6"
                app:layout_textSizePercent="4%w" />

            <EditText
                android:id="@+id/et_pwd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toRightOf="@id/tv_pwd"
                android:background="@color/transparent"
                android:hint="@string/edit_pwd"
                android:inputType="textPassword"
                android:maxLength="16"
                android:paddingStart="@dimen/dp_10"
                android:singleLine="true"
                android:textColor="@color/text_black_3"
                android:textColorHint="@color/edit_phone_color"
                app:layout_textSizePercent="4%w" />

            <ImageView
                android:id="@+id/iv_show"
                android:layout_width="@dimen/dp_0"
                android:layout_height="@dimen/dp_0"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@mipmap/btn_xianshi"
                android:contentDescription="@string/pwd_show"
                app:layout_heightPercent="3.6%w"
                app:layout_widthPercent="5.6%w" />


        </com.zhy.android.percent.support.PercentRelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0.5"
            android:layout_marginEnd="@dimen/dp_10"
            android:layout_marginStart="@dimen/dp_10"
            android:background="@color/theme_bg_color" />

        <com.zhy.android.percent.support.PercentRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:paddingEnd="@dimen/dp_10"
            android:paddingStart="@dimen/dp_10"
            app:layout_heightPercent="12.8%w">

            <TextView
                android:id="@+id/tv_pwd_sure"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="确认密码"
                android:textColor="@color/text_black_6"
                app:layout_textSizePercent="4%w" />

            <EditText
                android:id="@+id/et_pwd_sure"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toRightOf="@id/tv_pwd_sure"
                android:background="@color/transparent"
                android:hint="@string/edit_pwd_sure"
                android:inputType="textPassword"
                android:paddingStart="@dimen/dp_10"
                android:singleLine="true"
                android:textColor="@color/text_black_3"
                android:textColorHint="@color/edit_phone_color"
                app:layout_textSizePercent="4%w" />

            <ImageView
                android:id="@+id/iv_pwd_sure"
                android:layout_width="@dimen/dp_0"
                android:layout_height="@dimen/dp_0"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="@mipmap/btn_xianshi"
                android:contentDescription="@string/pwd_show"
                app:layout_heightPercent="3.6%w"
                app:layout_widthPercent="5.6%w" />
        </com.zhy.android.percent.support.PercentRelativeLayout>
    </com.zhy.android.percent.support.PercentLinearLayout>

    <TextView
        android:id="@+id/tv_sure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginRight="@dimen/dp_16"
        android:background="@drawable/shape_orange_bg"
        android:gravity="center"
        android:text="@string/sure"
        android:textColor="@color/white"
        app:layout_heightPercent="10.8%w"
        app:layout_marginTopPercent="16%w"
        app:layout_textSizePercent="4.2%w" />

</com.zhy.android.percent.support.PercentLinearLayout>