<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_act_gray"
    android:fitsSystemWindows="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <include layout="@layout/common_title_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_56"
            android:orientation="horizontal"
            android:paddingStart="@dimen/dp_10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="手机号"
                android:textColor="@color/text_black_3"
                android:textSize="@dimen/dp_14" />

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toRightOf="@id/tv_account"
                android:background="@color/transparent"
                android:hint="@string/edit_phone"
                android:inputType="phone"
                android:maxLength="11"
                android:paddingStart="@dimen/dp_10"
                android:singleLine="true"
                android:textColor="@color/text_black_3"
                android:textColorHint="@color/edit_phone_color"
                android:textSize="@dimen/dp_14" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0.5"
            android:layout_marginEnd="@dimen/dp_10"
            android:layout_marginStart="@dimen/dp_10"
            android:background="#DFDFDF" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_56"
            android:orientation="horizontal"
            android:paddingStart="@dimen/dp_10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/text_code"
                android:textColor="@color/text_black_3"
                android:textSize="@dimen/dp_14" />

            <EditText
                android:id="@+id/et_code"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:hint="@string/edit_code"
                android:inputType="number"
                android:maxLength="6"
                android:paddingStart="@dimen/dp_10"
                android:singleLine="true"
                android:textColor="@color/text_black_3"
                android:textColorHint="@color/edit_phone_color"
                android:textSize="@dimen/dp_14" />

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/dp_16"
                android:layout_marginEnd="@dimen/dp_6"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_toLeftOf="@id/tv_code_show"
                android:background="@color/orange" />

            <TextView
                android:id="@+id/tv_code_show"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/dp_10"
                android:gravity="center"
                android:text="点击获取"
                android:textColor="@color/text_black_3"
                android:textSize="@dimen/dp_14" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0.5"
            android:layout_marginEnd="@dimen/dp_10"
            android:layout_marginStart="@dimen/dp_10"
            android:background="#DFDFDF" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48"
            android:orientation="horizontal"
            android:paddingStart="@dimen/dp_10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="新密码"
                android:textColor="@color/text_black_3"
                android:textSize="@dimen/dp_14" />

            <EditText
                android:id="@+id/et_pwd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toRightOf="@id/tv_account"
                android:background="@color/transparent"
                android:hint="输入6位交易密码"
                android:inputType="textPassword"
                android:maxLength="6"
                android:paddingStart="@dimen/dp_10"
                android:singleLine="true"
                android:textColor="@color/text_black_3"
                android:textColorHint="@color/edit_phone_color"
                android:textSize="@dimen/dp_14" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0.5"
            android:layout_marginEnd="@dimen/dp_10"
            android:layout_marginStart="@dimen/dp_10"
            android:background="#DFDFDF" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48"
            android:orientation="horizontal"
            android:paddingStart="@dimen/dp_10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="新密码"
                android:textColor="@color/text_black_3"
                android:textSize="@dimen/dp_14" />

            <EditText
                android:id="@+id/et_pwd_sure"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toRightOf="@id/tv_account"
                android:background="@color/transparent"
                android:hint="再次输入交易密码"
                android:inputType="textPassword"
                android:maxLength="6"
                android:paddingStart="@dimen/dp_10"
                android:singleLine="true"
                android:textColor="@color/text_black_3"
                android:textColorHint="@color/edit_phone_color"
                android:textSize="@dimen/dp_14" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_submit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40"
        android:layout_marginEnd="@dimen/dp_10"
        android:layout_marginStart="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_24"
        android:background="@drawable/shape_orange_bg_gradient"
        android:gravity="center"
        android:text="确  定"
        android:textColor="@color/white"
        android:textSize="@dimen/dp_16" />
</LinearLayout>